fix: page loading improvements

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section class="d-flex flex-wrap justify-content-center align-items-center">
             <section class="col-lg-6 col-12 text-center image-container">
                 <h3 class="text fw-bold">Transforme seu Corpo e Saúde! Receba Dicas Exclusivas e Ofertas Incríveis em Suplementos!</h3>
-                <img src="assets/images/suplementacao.jpg" alt="Imagem de Suplemento" class="img-fluid">
+                <img src="assets/images/suplementacao.webp" alt="Imagem de Suplemento" class="img-fluid" width="600" height="400" loading="eager">
                 <p class="text mt-3">Quer elevar sua performance, saúde e bem-estar? Cadastre-se agora e tenha acesso a conteúdos exclusivos, recomendações de especialistas e promoções de suplementos sob medida para você!</p>
             </section>
 
@@ -46,6 +46,6 @@
         </header>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/script.js" defer></script>
 </body>
 </html>
