--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <a class="nav-link" href="#aboutSection">Sobre o Produto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Mais Detalhes</a>
+                            <a class="nav-link" href="#gallerySection">Mais Detalhes</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#testimonialsSection">Depoimentos</a>
@@ -76,30 +76,7 @@
             </div>
         </nav>
 
-        <h4 class="text-center overflow-hidden">Bem-vindo, <span id="userName"></span>!</h5>
-        <!-- <div id="heroSection" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="assets/images/banner1.jpg" class="d-block w-100" alt="Produto 1">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/images/banner2.jpg" class="d-block w-100" alt="Produto 2">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/images/banner3.jpg" class="d-block w-100" alt="Produto 3">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#heroSection" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#heroSection" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div> -->
-
-        <section id="aboutSection" class="p-4">
+        <section id="aboutSection" class="p-4 mt-5">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <div class="text-content mb-4 mb-lg-0">
                     <h2 class="overflow-hidden">Sobre o Produto</h2>
@@ -113,8 +90,15 @@
                 </div>
 
                 <div class="image-content">
-                    <img src="assets/images/produto.webp" alt="Sobre o Produto" class="img-fluid" width="500" height="400" loading="eager">
+                    <img id="mainImage" src="assets/images/produto.webp" alt="Sobre o Produto" class="img-fluid" width="500" height="400" loading="eager">
                 </div>
+            </div>
+
+            <div class="thumbnail-grid d-flex justify-content-center">
+                <img src="assets/images/produto.webp" alt="Thumbnail 1" class="thumbnail" data-full="assets/images/produto.webp">
+                <img src="assets/images/produto1.webp" alt="Thumbnail 2" class="thumbnail" width="100" data-full="assets/images/produto1.webp">
+                <img src="assets/images/produto2.webp" alt="Thumbnail 3" class="thumbnail" width="100" data-full="assets/images/produto2.webp">
+                <img src="assets/images/produto3.webp" alt="Thumbnail 4" class="thumbnail" width="100" data-full="assets/images/produto3.webp">
             </div>
         </section>
 
@@ -136,7 +120,6 @@
             </div>
         </section>
 
-        <!-- Modal para Visualização em Tela Cheia -->
         <div class="modal fade" id="galleryModal" tabindex="-1" aria-labelledby="galleryModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered custom-modal modal-sm">
                 <div class="modal-content">
@@ -145,7 +128,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body text-center">
-                        <img src="" id="modalImage" class="img-fluid">
+                        <img src="" id="modalImage" width="200" class="img-fluid">
                     </div>
                     <div class="modal-footer justify-content-between">
                         <button type="button" class="btn btn-secondary" id="prevButton">Anterior</button>
