style: finally section depoiments

--- a/index.html
+++ b/index.html
@@ -138,29 +138,69 @@
             </div>
         </div>
 
-        <section id="testimonialsSection" class="p-4">
+        <section id="testimonialsSection" class="p-4" style="background-color: rgba(0,0,0, 0.5);">
             <h2 class="overflow-hidden">Depoimentos</h2>
             <div id="testimonialsCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <p>"Produto excelente, mudou minha vida!"</p>
+                        <div class="testimonial-content text-center">
+                            <img src="assets/images/pessoa1.webp" alt="Cliente 1" class="rounded-circle mb-3">
+                            <h5 class="overflow-hidden">João Silva</h5>
+                            <p>"Produto excelente, mudou minha vida!"</p>
+                        </div>
+                        <!-- Botões dentro do item -->
+                        <div class="d-flex justify-content-between" >
+                            <button class="carousel-control-prev" type="button" data-bs-target="#testimonialsCarousel" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#testimonialsCarousel" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
                     </div>
                     <div class="carousel-item">
-                        <p>"Ótima qualidade e preço justo."</p>
+                        <div class="testimonial-content text-center">
+                            <img src="assets/images/pessoa2.webp" alt="Cliente 2" class="rounded-circle mb-3">
+                            <h5 class="overflow-hidden">Maria Santos</h5>
+                            <p>"Ótima qualidade e preço justo."</p>
+                        </div>
+                        <!-- Botões dentro do item -->
+                        <div class="d-flex justify-content-between">
+                            <button class="carousel-control-prev" type="button" data-bs-target="#testimonialsCarousel" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#testimonialsCarousel" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="testimonial-content text-center">
+                            <img src="assets/images/pessoa3.webp" alt="Cliente 3" class="rounded-circle mb-3">
+                            <h5 class="overflow-hidden">Lucas Pereira</h5>
+                            <p>"Atendimento e entrega rápida!"</p>
+                        </div>
+                        <!-- Botões dentro do item -->
+                        <div class="d-flex justify-content-between">
+                            <button class="carousel-control-prev" type="button" data-bs-target="#testimonialsCarousel" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#testimonialsCarousel" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#testimonialsCarousel"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#testimonialsCarousel"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+                <!-- Remover os botões de controle do carrossel de fora -->
             </div>
         </section>
+        
 
         <section id="countdownSection" class="p-4 text-center">
             <div class="d-flex align-items-center justify-content-center gap-3">
