--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#testimonialsSection">Depoimentos</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#otherInformation">Outras informações</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -219,7 +222,7 @@
             <button class="btn btn-primary mt-3 btn-pulsar">Comprar Agora</button>
         </section>
 
-        <footer class="bg-dark text-white pt-5 pb-4">
+        <footer id="otherInformation" class="bg-dark text-white pt-5 pb-4">
             <div class="container text-center text-md-start">
                 <div class="row text-center text-md-start">
                     <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
