fix: update of loading images

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preload" href="assets/images/suplementacao.webp" as="image">
 </head>
 
 <body>
@@ -18,8 +19,16 @@
             <section class="col-lg-6 col-12 text-center image-container">
                 <h3 class="text fw-bold">Transforme seu Corpo e Saúde! Receba Dicas Exclusivas e Ofertas Incríveis em
                     Suplementos!</h3>
-                <img src="assets/images/suplementacao.webp" alt="Imagem de Suplemento" class="img-fluid" width="600"
-                    height="400" loading="eager">
+                    <img
+                        src="assets/images/suplementacao.webp"
+                        alt="Imagem de Suplemento"
+                        class="img-fluid"
+                        width="600"
+                        height="400"
+                        loading="eager"
+                        decoding="async"
+                        style="display: block; max-width: 100%; height: auto;"
+                    >
                 <p class="text mt-3">Quer elevar sua performance, saúde e bem-estar? Cadastre-se agora e tenha acesso a
                     conteúdos exclusivos, recomendações de especialistas e promoções de suplementos sob medida para
                     você!</p>
